@@ -1,7 +1,8 @@
 About IndexTank Engine
 ======================
 
-TBD
+This project contains IndexTank (http://indextank.com) search engine implementation.
+Includes features like variables (boosts), categories (facets), faceted search, snippeting, custom scoring functions, suggest, and autocomplete.
 
 ### Homepage:
 
@@ -23,19 +24,43 @@ artifactId: engine
 
 version: 1.0.0
 
-### Library generation:
+### Package generation:
 
 Build a single jar containing all dependencies by:
 
-mvn assembly:single
+mvn package assembly:single
 
 This will create a single file in:
 
 target/engine-1.0.0-jar-with-dependencies.jar
 
-### Code Examples:
+### Sample configuration:
 
-TBD
+Main class: com.flaptor.indextank.index.IndexEngine
+
+VM args: -verbose:gc -Xloggc:logs/gc.log -XX:+PrintGCTimeStamps -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -Dorg.apache.lucene.FSDirectory.class=org.apache.lucene.store.MMapDirectory -Xmx600M
+
+Program args: --facets --rti-size 500 --conf-file sample-engine-config --port 20220 --environment-prefix TEST --recover --dir index --snippets --suggest documents --boosts 3 --index-code dgmqn --functions 0:-age
+
+Sample engine configuration file contents:
+{
+"max_variables": 3, 
+"functions": {"0": "-age"}, 
+"index_code": "dgmqn", 
+"allows_facets": true, 
+"ram": 600, 
+"log_server_host": "index123.localhost", 
+"autocomplete": true,
+"log_server_port": 15100, 
+"autocomplete_type": "documents",
+"allows_snippets": true, 
+"rti_size": 500, 
+"facets_bits": 5, 
+"base_port": 20220, 
+"log_based_storage": false, 
+"xmx": 600
+}
+
 
 ### Eclipse:
 
